<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <cn.aijiamuyingfang.weapp.manager.widgets.WeToolBar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetEnd="56dp"
            app:title="系统消息" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/largePadding"
            android:paddingBottom="@dimen/largePadding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/Activity_Message_Detail_Title"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View style="@style/line_horizontal" />

            <cn.aijiamuyingfang.weapp.manager.widgets.ClearEditText
                android:id="@+id/message_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:hint="@string/Activity_Message_Detail_Title_Tip"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <View style="@style/line_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/largePadding"
            android:paddingBottom="@dimen/largePadding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/Activity_Message_Detail_Roundup"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View style="@style/line_horizontal" />

            <cn.aijiamuyingfang.weapp.manager.widgets.ClearEditText
                android:id="@+id/message_roundup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:hint="@string/Activity_Message_Detail_Roundup_Tip"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <View style="@style/line_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/largePadding"
            android:paddingBottom="@dimen/largePadding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/Activity_Message_Detail_Content"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View style="@style/line_horizontal" />

            <cn.aijiamuyingfang.weapp.manager.widgets.ClearEditText
                android:id="@+id/message_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:hint="@string/Activity_Message_Detail_Content_Tip"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <View style="@style/line_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/largePadding"
            android:paddingBottom="@dimen/largePadding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/Activity_Message_Detail_Start_Time"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View style="@style/line_horizontal" />

            <TextView
                android:id="@+id/message_startTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:hint="@string/Activity_Message_Detail_Start_Time_Tip"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <View style="@style/line_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/largePadding"
            android:paddingBottom="@dimen/largePadding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/Activity_Message_Detail_End_Time"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View style="@style/line_horizontal" />

            <EditText
                android:id="@+id/message_finishTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:hint="@string/Activity_Message_Detail_End_Time_Tip"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <View style="@style/line_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/largePadding"
            android:paddingBottom="@dimen/largePadding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/Activity_Message_Detail_Type"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View style="@style/line_horizontal" />

            <Spinner
                android:id="@+id/message_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <Button
            android:id="@+id/save_message"
            style="@style/bigRedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/Activity_Message_Detail_Save_Button" />
    </LinearLayout>
</ScrollView>
