<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <cn.aijiamuyingfang.weapp.manager.widgets.WeToolBar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetEnd="56dp"
            app:title="@string/add_good" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/selector_view_block"
            android:orientation="vertical"
            android:padding="@dimen/largePadding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/largePadding"
                android:paddingBottom="@dimen/largePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/Activity_Add_Good_Good_Name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View style="@style/line_horizontal" />

                <cn.aijiamuyingfang.weapp.manager.widgets.ClearEditText
                    android:id="@+id/et_good_name"
                    style="@style/editText_base"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:hint="@string/Activity_Add_Good_Good_Name_Tip" />
            </LinearLayout>

            <View style="@style/line_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/largePadding"
                android:paddingBottom="@dimen/largePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/Activity_Add_Good_Good_Pack"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View style="@style/line_horizontal" />

                <cn.aijiamuyingfang.weapp.manager.widgets.ClearEditText
                    android:id="@+id/et_good_pack"
                    style="@style/editText_base"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:hint="@string/Activity_Add_Good_Good_Pack_Tip" />
            </LinearLayout>

            <View style="@style/line_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/largePadding"
                android:paddingBottom="@dimen/largePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/Activity_Add_Good_Good_Level"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View style="@style/line_horizontal" />

                <cn.aijiamuyingfang.weapp.manager.widgets.ClearEditText
                    android:id="@+id/et_good_level"
                    style="@style/editText_base"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:hint="@string/Activity_Add_Good_Good_Level_Tip" />
            </LinearLayout>

            <View style="@style/line_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/largePadding"
                android:paddingBottom="@dimen/largePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/Activity_Add_Good_Good_BarCode"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View style="@style/line_horizontal" />

                <cn.aijiamuyingfang.weapp.manager.widgets.ClearEditText
                    android:id="@+id/et_bar_code"
                    style="@style/editText_base"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:hint="@string/Activity_Add_Good_Good_BarCode_Tip" />
            </LinearLayout>

            <View style="@style/line_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/largePadding"
                android:paddingBottom="@dimen/largePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/Activity_Add_Good_Good_Price"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View style="@style/line_horizontal" />

                <cn.aijiamuyingfang.weapp.manager.widgets.ClearEditText
                    android:id="@+id/et_good_price"
                    style="@style/editText_base"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:hint="@string/Activity_Add_Good_Good_Price_Tip" />
            </LinearLayout>

            <View style="@style/line_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/largePadding"
                android:paddingBottom="@dimen/largePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/Activity_Add_Good_Good_Count"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View style="@style/line_horizontal" />

                <cn.aijiamuyingfang.weapp.manager.widgets.ClearEditText
                    android:id="@+id/et_good_count"
                    style="@style/editText_base"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:hint="@string/Activity_Add_Good_Good_Count_Tip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/largePadding"
                android:paddingBottom="@dimen/largePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/Activity_Add_Good_Good_LifeTime"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View style="@style/line_horizontal" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_good_lifetime_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/Activity_Add_Good_Good_LifeTime_Start_Tip"
                        android:inputType="none"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                    <View style="@style/line_vertical" />

                    <EditText
                        android:id="@+id/et_good_lifetime_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/Activity_Add_Good_Good_LifeTime_End_Tip"
                        android:inputType="none"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <View style="@style/line_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/largePadding"
                android:paddingBottom="@dimen/largePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/Activity_Add_Good_Good_Logo"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View style="@style/line_vertical" />

                <cn.aijiamuyingfang.weapp.manager.widgets.EditableImageView
                    android:id="@+id/iv_good_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/company_logo" />

            </LinearLayout>

            <View style="@style/line_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/largePadding"
                android:paddingBottom="@dimen/largePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/Activity_Add_Good_Good_Detail"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View style="@style/line_vertical" />

                <android.support.v7.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:columnCount="3"
                    app:rowCount="2">

                    <cn.aijiamuyingfang.weapp.manager.widgets.EditableImageView
                        android:id="@+id/iv_good_detail_1"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/company_logo" />

                    <cn.aijiamuyingfang.weapp.manager.widgets.EditableImageView
                        android:id="@+id/iv_good_detail_2"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/company_logo" />

                    <cn.aijiamuyingfang.weapp.manager.widgets.EditableImageView
                        android:id="@+id/iv_good_detail_3"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/company_logo" />

                    <cn.aijiamuyingfang.weapp.manager.widgets.EditableImageView
                        android:id="@+id/iv_good_detail_4"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/company_logo" />

                    <cn.aijiamuyingfang.weapp.manager.widgets.EditableImageView
                        android:id="@+id/iv_good_detail_5"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/company_logo" />

                    <cn.aijiamuyingfang.weapp.manager.widgets.EditableImageView
                        android:id="@+id/iv_good_detail_6"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/company_logo" />
                </android.support.v7.widget.GridLayout>

            </LinearLayout>

            <View style="@style/line_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/largePadding"
                android:paddingBottom="@dimen/largePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/Activity_Add_Good_Good_Score"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View style="@style/line_horizontal" />

                <cn.aijiamuyingfang.weapp.manager.widgets.ClearEditText
                    android:id="@+id/et_good_score"
                    style="@style/editText_base"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:hint="@string/Activity_Add_Good_Good_Score_Tip" />
            </LinearLayout>

            <View style="@style/line_vertical" />

            <Button
                android:id="@+id/add_goodvoucher"
                style="@style/bigRedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Activity_Add_Good_GoodVoucher_Button" />

            <View style="@style/line_vertical" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/refreshable_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <View style="@style/line_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/largePadding"
                android:paddingBottom="@dimen/largePadding">

                <Button
                    android:id="@+id/save_good"
                    style="@style/bigRedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Activity_Add_Good_Save_Button" />

                <View style="@style/line_horizontal" />

                <Button
                    android:id="@+id/save_voucheritem"
                    style="@style/bigRedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Activity_Add_Good_Create_Voucher_Item_Button" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
